<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">movietime</string>
    <string name="review_by">Reviewed by: </string>
    <string name="refresh_db">ReQuery TMDB.</string>
    <string name="fetch_from_internet">Data being fetched from the internet.</string>
    <string name="fetch_from_db">Data being fetched from the DB.</string>
    <string name="no_connectivity">Your device is not connected to the internet.\nSaved favorite movies (not displayed) are available locally,\nplease connect to view top rated and popular movies.</string>
    <string name="no_reviews">There are no reviews for this movie.</string>
    <string name="movie_added"> has been added to saved favorites.</string>
    <string name="movie_removed">has been removed from saved favorites.</string>
    <string name="forward_button">Next\nTrailer</string>
    <string name="back_button">Previous\nTrailer</string>
    <string name="detail_poster_image_view">Poster from selected movie.</string>
    <string name="detail_trailer_image_view">Trailer from selected movie.</string>
    <string name="movie_poster_image_view">Movie Poster</string>
    <string name="api_key" tools:keep="@string/api_key">api_key=594110145ddb52aad415dec046673010</string>
    <string name="poster_url_prefix">http://image.tmdb.org/t/p/w342</string>
    <string name="switch_to_popular">Switch to Popular Movies</string>
    <string name="switch_to_highest_rated">Switch to Highest Rated Movies</string>
    <string name="switch_to_favorites">Switch to Favorite Movies</string>
    <string name="clear_favorites">Clear Favorite Movies</string>
    <string name="add_to_favorites">Add to \nFavorite Movies</string>
    <string name="release_date" tools:keep="@string/release_date">Release Date: </string>
    <string name="plot_synopsis" tools:keep="@string/plot_synopsis">Plot Synopsis: </string>
    <string name="vote_average" tools:keep="@string/vote_average">Vote Average: </string>
    <string name="connection_error_message" tools:keep="@string/connection_error_message">No Connection\nConnect to the internet to\nview popular or highest rated movies.</string>
    <string-array name="params">
        <item>title</item>
        <item>release_date</item>
        <item>vote_average</item>
        <item>overview</item>
        <item>poster_path</item>
        <item>id</item>
    </string-array>
    <string-array name="review_params" tools:keep="@array/review_params">
        <item>author</item>
        <item>content</item>
    </string-array>
</resources>
