<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <android.support.constraint.Guideline
            android:id="@+id/left_quarter"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.25" />

        <android.support.constraint.Guideline
            android:id="@+id/right_quarter"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.75" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:padding="@dimen/padding"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/title_size" />

        <TextView
            android:id="@+id/gray_text_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/gray"
            app:layout_constraintBottom_toTopOf="@id/movie_description"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/poster" />

        <ImageView
            android:id="@+id/poster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/detail_poster_image_view"
            android:cropToPadding="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <TextView
            android:id="@+id/release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginTop="@dimen/text_margin"
            android:textSize="@dimen/heading1_size"
            app:layout_constraintLeft_toRightOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <TextView
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginTop="@dimen/text_margin"
            android:textSize="@dimen/heading2_size"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/release_date" />

        <Button
            android:id="@+id/save_for_later_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/text_margin"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginTop="@dimen/text_margin"
            android:text="@string/add_to_favorites"
            app:layout_constraintBottom_toBottomOf="@id/poster"
            app:layout_constraintLeft_toLeftOf="@id/guideline" />

        <Button
            android:id="@+id/remove_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/text_margin"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginTop="@dimen/text_margin"
            android:text="remove from db"
            app:layout_constraintBottom_toBottomOf="@id/poster"
            app:layout_constraintLeft_toLeftOf="@id/guideline" />


        <TextView
            android:id="@+id/movie_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/light_gray"
            android:padding="@dimen/padding"
            android:textSize="@dimen/paragraph_large_size"
            app:layout_constraintTop_toBottomOf="@id/poster" />

        <Button
            android:id="@+id/light_gray"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/really_light_gray"
            app:layout_constraintBottom_toBottomOf="@id/trailer_image_view"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/trailer_image_view" />

        <Button
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_button"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@id/trailer_image_view"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/left_quarter"
            app:layout_constraintTop_toBottomOf="@id/movie_description" />

        <Button
            android:id="@+id/forward_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forward_button"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@id/trailer_image_view"
            app:layout_constraintLeft_toRightOf="@id/right_quarter"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movie_description" />


        <ImageView
            android:id="@+id/trailer_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/detail_trailer_image_view"
            android:elevation="2dp"
            android:onClick="watchYoutube"
            app:layout_constraintLeft_toRightOf="@id/left_quarter"
            app:layout_constraintRight_toLeftOf="@id/right_quarter"
            app:layout_constraintTop_toBottomOf="@id/movie_description" />

        <TextView
            android:id="@+id/movie_reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding"
            android:text="@string/no_reviews"
            android:textSize="@dimen/paragraph_small_size"
            app:layout_constraintTop_toBottomOf="@+id/trailer_image_view" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>